--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
     <header id="header">
         <div class="container header-container">
             <a href="#" class="logo">
-                <i class="fas fa-graduation-cap"></i> Course Bazaar
+                <i class="fas fa-graduation-cap"></i> Course Market
             </a>
             <div class="mobile-toggle" id="mobileToggle">
                 <i class="fas fa-bars"></i>
@@ -1374,4 +1374,5 @@
         }
     </script>
 </body>
+
 </html>
