--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@
         const courseData = {
             popular: [
                 { id: 1, title: "Complete Web Development Bootcamp 2024", category: "web-dev", price: 1499, rating: 4.5, image: "https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" },
-                { id: 2, title: "Advanced Video Editing Masterclass", category: "video-editing", price: 1999, rating: 4.7, image: "https://images.unsplash.com/photo-1626785774573-4b799315345d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" },
+                { id: 2, title: "Saqlain Khan Video Edition course", category: "video-editing", price: 1999, rating: 4.7, image: "https://images.unsplash.com/photo-1626785774573-4b799315345d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" },
                 { id: 3, title: "AI & Machine Learning Fundamentals", category: "ai", price: 2499, rating: 4.8, image: "https://images.unsplash.com/photo-1677442136019-21780ecad995?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" },
                 { id: 4, title: "Digital Marketing Complete Course", category: "marketing", price: 1299, rating: 4.4, image: "https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" },
                 { id: 5, title: "Data Science & Analytics Bootcamp", category: "data-science", price: 2999, rating: 4.9, image: "https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" },
@@ -2002,3 +2002,4 @@
     </script>
 </body>
 </html>
+
